@@ -18,6 +18,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7149: fix exception in urllib when detecting proxy settings on OSX.
+
 - Issue #7120: logging: Removed import of multiprocessing which is causing
   crash in GAE.
 
